--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
     "react": "^16.14.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-icons": "^3.11.0",
+    "react-scripts": "3.4.3",
+    "reactstrap": "^8.6.0",
+    "uuid": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.27.0",
+    "typescript": "3.3.3"
   }
 }
