--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "^4.5.3",
     "react": "^16.14.0",
     "react-beautiful-dnd": "^13.0.0",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
