--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "cropperjs": "^1.5.9",
+    "dropzone": "^5.7.2",
+    "firebase": "^8.0.2",
     "react": "^16.14.0",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
+    "react-cropper": "^2.1.4",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.6.0",
-    "uuid": "3.3.3"
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
